--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Fazer um curso maquiagem</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Fazer um curso de maquiagem</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar meu objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
