--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Manter uma rotina Saudavél</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Manter uma rotina Saudável</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar meu objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
